new proj/src/objects/GE_ES_Hit_Rate__c.object
<CustomObject>
    <description>This object stores the summary of the quantities quoted, ordered and the correspondent amounts to calculate the hit rate in the correspondent reports.</description>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hit_Rate_By_Qty__c</fullName>
        <formula>IF(Qty_Quotes__c &gt; 0,   Qty_Ordered__c  /  Qty_Quotes__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hit Rate By Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hit_Rate_By_USD__c</fullName>
        <formula>IF( USD_Quoted__c &gt; 0,  USD_Ordered__c / USD_Quoted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hit Rate By USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <label>Industry Segment</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( Record_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_L__c</fullName>
        <label>P&amp;L</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_Ordered__c</fullName>
        <label>Qty Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Quotes__c</fullName>
        <label>Qty Quotes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CEILING( Month__c / 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Date__c</fullName>
        <description>Date corresponding to the information in the record</description>
        <label>Record Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USD_Ordered__c</fullName>
        <label>USD Ordered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD_Quoted__c</fullName>
        <label>USD Quoted</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD_per_Order__c</fullName>
        <formula>IF( Qty_Ordered__c &gt; 0,  USD_Ordered__c / Qty_Ordered__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USD per Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD_per_Quote__c</fullName>
        <formula>IF( Qty_Quotes__c &gt; 0,  USD_Quoted__c / Qty_Quotes__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USD per Quote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Month__c</fullName>
        <formula>Year__c  + &quot;-&quot; +  LPAD(text( Month__c ),2,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Quarter__c</fullName>
        <formula>Year__c + &quot; Q&quot;+ text(Quarter__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year-Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>text(YEAR( Record_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Hit Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Original_Records</fullName>
        <columns>Record_Date__c</columns>
        <columns>Year__c</columns>
        <columns>Quarter__c</columns>
        <columns>Month__c</columns>
        <columns>Industry_Segment__c</columns>
        <columns>P_L__c</columns>
        <columns>Qty_Quotes__c</columns>
        <columns>Qty_Ordered__c</columns>
        <columns>USD_Quoted__c</columns>
        <columns>USD_Ordered__c</columns>
        <columns>Hit_Rate_By_Qty__c</columns>
        <columns>Hit_Rate_By_USD__c</columns>
        <columns>USD_per_Quote__c</columns>
        <columns>USD_per_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>Original Records</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Hit Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hit Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>